# app-eai-agent-gateway

./: .air.toml  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chat_client.py  docker-compose.yaml  docker-compose.yml  flake.nix  generate_docs.py  go.mod  go.sum  jaeger-compose.yml  justfile  pyproject.toml  ruff.toml  sandbox.go  sandbox_client.py  test_endpoints.py
.github/workflows/: build-container.yaml
cmd/gateway/: main.go
cmd/worker/: main.go
docs/: README.md  docs.go  index.html  signoz-dashboard-guide.md  swagger.json  swagger.yaml
go-refac/: .gitignore  README.md  go.mod  go.sum
internal/api/: server.go
internal/config/: config.go  config_test_helper.go
internal/handlers/: health.go  message.go  meta_webhook.go  meta_webhook_test.go  user_activity.go
internal/middleware/: correlation.go  cors.go  logger.go  metrics.go  otel.go  security.go  structured_logging.go
internal/models/: media_envelope.go  message.go  message_test.go  meta_webhook.go
internal/services/: callback_service.go  credential_manager.go  data_relay_service.go  eai_agent_service.go  google_agent_engine_service.go  google_agent_engine_service_test.go  health_service.go  message_consumer.go  message_formatter_service.go  meta_graph_service.go  meta_graph_service_test.go  otel_service.go  postgres_service.go  redis_service.go  (+9 more)
load-tests/: README.md  generate-charts.py  main.js
src/: main.py
tests/: README.md  __init__.py  run_all_tests.py  test_datetime_serialization.py  test_event_loop_fixes.py  test_message_formatter.py  test_providers_integration.py
(+53 files in other folders)
