[project]
name = "eai-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "celery[redis]>=5.5.3",
    "fastapi>=0.116.1",
    "flower>=2.0.1",
    "granian[uvloop]>=2.4.2",
    "letta-client>=0.1.215",
    "loguru>=0.7.3",
    "redis[hiredis]>=5.2.1",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-celery>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-instrumentation-redis>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
]
